[package]
name = "og-image-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.7.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
imageproc = "0.25"
ab_glyph = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
console_error_panic_hook = "0.1"
